Main/ Struct: 프로젝트 구조 변경 및 폰트 설정
- 프로젝트 구조 변경 및 불필요한 파일 제거
- 프로젝트 폰트 설정

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* 공통적으로 사용하는 스타일을 모아놓았습니다.*/
+
+@font-face {
+  font-family: "GlobalFont";
+  src: url("./asset/font/Freesentation.ttf");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: GlobalFont;
+  letter-spacing: 0.01rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
